--- a/body1/MCL.html
+++ b/body1/MCL.html
@@ -15,7 +15,7 @@
                     <h2 class="maintitle">Make the Conditioning Life</h2>
                 </div>
                 <div>
-                        <a  class="text-link" href="./Make the Conditioning Life"><p>We strive to answer the question, “What functional value and scientific evidence matter to our customers?”</p>
+                        <a  class="text-link" href="./Make the Conditioning Life"><p class="text2">We strive to answer the question, “What functional value and scientific evidence matter to our customers?”</p>
                             <div class="yajirusi">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12" viewBox="0 0 21 12" fill="none">
                                     <path d="M0 6L19 6" stroke="white"></path>
