--- a/body1/CB.html
+++ b/body1/CB.html
@@ -15,7 +15,7 @@
                     <h2 class="maintitle">Conditioning Brand</h2>
                 </div>
                 <div>
-                        <a  class="text-link" href="./Conditioning Brand"><p>Support a body that helps you thrive.</p>
+                        <a  class="text-link" href="./Conditioning Brand"><p class="text3">Support a body that helps you thrive.</p>
                             <div class="yajirusi">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12" viewBox="0 0 21 12" fill="none">
                                     <path d="M0 6L19 6" stroke="white"></path>
