--- a/body1/index.html
+++ b/body1/index.html
@@ -15,7 +15,7 @@
                     <h2 class="maintitle">Philosophy</h2>
                 </div>
                 <div>
-                        <a  class="text-link" href="./Philosophy"><p>Create a society that promotes health and empowers individuals to realize their full potential.</p>
+                        <a  class="text-link" href="./Philosophy"><p class="text1">Create a society that promotes health and empowers individuals to realize their full potential.</p>
                             <div class="yajirusi">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12" viewBox="0 0 21 12" fill="none">
                                     <path d="M0 6L19 6" stroke="white"></path>
