--- a/header_kadai/index.html
+++ b/header_kadai/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css"/>
     </head>
@@ -39,35 +40,11 @@
                         </a>
                     </div>    
                 </div>
-                <a id="menu-open" href="#">
+                <a class="menu-open" href="#">
                     <div>MENU</div>
                 </a>
-                <nav class="nav-sp">
-                    <a id="nav-close" href="index.html">CLOSE</a>
-                    <div class="menu-all">
-                        <a class="menu" href="index.html">TREATMENTS</a>
-                        <a class="menu" href="index.html">ABOUT</a>
-                        <a class="menu" href="index.html">CONTACT</a>
-                        <a class="menu" href="index.html">LOGIN</a>
-                    </div>
-                    <div class="menu-button">
-                        <a class="menu-logo" href="#">
-                            <div class="menu-double">
-                                <div class="menu-buttontext">GET STARTED</div>
-                                <div class="menu-hovertext">GET STARTED</div>
-                            </div>
-                            <div>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 14 14" fill="none" class="menu-link_button_icon" style="transform: translate3d(0%, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4.25006 2.25H11.0001C11.4143 2.25 11.7501 2.58579 11.7501 3V9.75C11.7501 10.1642 11.4143 10.5 11.0001 10.5C10.5858 10.5 10.2501 10.1642 10.2501 9.75V4.81066L2.53039 12.5303L1.46973 11.4697L9.1894 3.75H4.25006C3.83584 3.75 3.50006 3.41421 3.50006 3C3.50006 2.58579 3.83584 2.25 4.25006 2.25Z" fill="currentColor"></path>
-                                </svg>
-                                <svg xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 14 14" fill="none" class="menu-link_button_icon hoverlogo" style="transform: translate3d(0%, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4.25006 2.25H11.0001C11.4143 2.25 11.7501 2.58579 11.7501 3V9.75C11.7501 10.1642 11.4143 10.5 11.0001 10.5C10.5858 10.5 10.2501 10.1642 10.2501 9.75V4.81066L2.53039 12.5303L1.46973 11.4697L9.1894 3.75H4.25006C3.83584 3.75 3.50006 3.41421 3.50006 3C3.50006 2.58579 3.83584 2.25 4.25006 2.25Z" fill="currentColor"></path>
-                                </svg>
-                            </div>    
-                        </a>
-                    </div>
-                </nav>
             </div>
         </header>
+        <script src="header.js"></script>
     </body>
 </html>
