--- a/header_kadai/index.html
+++ b/header_kadai/index.html
@@ -17,12 +17,21 @@
                     <path d="M116.97 1.73193H109.983L100.585 31.4786H104.769L107.096 23.7847H119.773L122.099 31.4786H126.284L116.97 1.73193ZM108.132 20.3804H106.151L108.885 17.7855L113.53 1.75463L118.736 20.3879H108.125L108.132 20.3804Z" fill="currentColor"></path>
                 </svg></a>
                 <div class="rightlink">
-                    <div class="nav">
-                        <a class="navlink" href="index.html">TREATMENTS</a>
-                        <a class="navlink" href="index.html">ABOUT</a>
-                        <a class="navlink" href="index.html">CONTACT</a>
-                        <a class="navlink" href="index.html">LOGIN</a>
-                    </div>
+                    <button class="close">close</button>
+                    <ul class="nav">
+                        <li>
+                            <a class="navlink" href="index.html">TREATMENTS</a>
+                        </li>
+                        <li>
+                            <a class="navlink" href="index.html">ABOUT</a>
+                        </li>
+                        <li>
+                            <a class="navlink" href="index.html">CONTACT</a>
+                        </li>
+                        <li>
+                            <a class="navlink" href="index.html">LOGIN</a>
+                        </li>
+                    </ul>
                     <div class="button">
                         <a class="link" href="#">
                             <div class="double">
@@ -44,6 +53,7 @@
                     <div>MENU</div>
                 </a>
             </div>
+            <div class="background"></div>
         </header>
         <script src="header.js"></script>
     </body>
