--- a/header_kadai/index.html
+++ b/header_kadai/index.html
@@ -17,23 +17,43 @@
                     <path d="M116.97 1.73193H109.983L100.585 31.4786H104.769L107.096 23.7847H119.773L122.099 31.4786H126.284L116.97 1.73193ZM108.132 20.3804H106.151L108.885 17.7855L113.53 1.75463L118.736 20.3879H108.125L108.132 20.3804Z" fill="currentColor"></path>
                 </svg></a>
                 <div class="rightlink">
-                    <button class="close">close</button>
+                    <div class="close">
+                        <button>close</button>
+                    </div>
                     <ul class="nav">
                         <li>
                             <a class="navlink" href="index.html">TREATMENTS</a>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 14 14" fill="none" class="link_button_icon icon" style="transform: translate3d(0%, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M4.25006 2.25H11.0001C11.4143 2.25 11.7501 2.58579 11.7501 3V9.75C11.7501 10.1642 11.4143 10.5 11.0001 10.5C10.5858 10.5 10.2501 10.1642 10.2501 9.75V4.81066L2.53039 12.5303L1.46973 11.4697L9.1894 3.75H4.25006C3.83584 3.75 3.50006 3.41421 3.50006 3C3.50006 2.58579 3.83584 2.25 4.25006 2.25Z" fill="currentColor"></path>
+                            </svg>
                         </li>
                         <li>
                             <a class="navlink" href="index.html">ABOUT</a>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 14 14" fill="none" class="link_button_icon icon" style="transform: translate3d(0%, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M4.25006 2.25H11.0001C11.4143 2.25 11.7501 2.58579 11.7501 3V9.75C11.7501 10.1642 11.4143 10.5 11.0001 10.5C10.5858 10.5 10.2501 10.1642 10.2501 9.75V4.81066L2.53039 12.5303L1.46973 11.4697L9.1894 3.75H4.25006C3.83584 3.75 3.50006 3.41421 3.50006 3C3.50006 2.58579 3.83584 2.25 4.25006 2.25Z" fill="currentColor"></path>
+                            </svg>
                         </li>
                         <li>
                             <a class="navlink" href="index.html">CONTACT</a>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 14 14" fill="none" class="link_button_icon icon" style="transform: translate3d(0%, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M4.25006 2.25H11.0001C11.4143 2.25 11.7501 2.58579 11.7501 3V9.75C11.7501 10.1642 11.4143 10.5 11.0001 10.5C10.5858 10.5 10.2501 10.1642 10.2501 9.75V4.81066L2.53039 12.5303L1.46973 11.4697L9.1894 3.75H4.25006C3.83584 3.75 3.50006 3.41421 3.50006 3C3.50006 2.58579 3.83584 2.25 4.25006 2.25Z" fill="currentColor"></path>
+                            </svg>
                         </li>
                         <li>
                             <a class="navlink" href="index.html">LOGIN</a>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 14 14" fill="none" class="link_button_icon icon" style="transform: translate3d(0%, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M4.25006 2.25H11.0001C11.4143 2.25 11.7501 2.58579 11.7501 3V9.75C11.7501 10.1642 11.4143 10.5 11.0001 10.5C10.5858 10.5 10.2501 10.1642 10.2501 9.75V4.81066L2.53039 12.5303L1.46973 11.4697L9.1894 3.75H4.25006C3.83584 3.75 3.50006 3.41421 3.50006 3C3.50006 2.58579 3.83584 2.25 4.25006 2.25Z" fill="currentColor"></path>
+                            </svg>
+                        </li>
+                        <li class="hbnav">
+                            <a class="navlink" href="index.html">PARTNERS</a>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="100%" viewBox="0 0 14 14" fill="none" class="link_button_icon icon" style="transform: translate3d(0%, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M4.25006 2.25H11.0001C11.4143 2.25 11.7501 2.58579 11.7501 3V9.75C11.7501 10.1642 11.4143 10.5 11.0001 10.5C10.5858 10.5 10.2501 10.1642 10.2501 9.75V4.81066L2.53039 12.5303L1.46973 11.4697L9.1894 3.75H4.25006C3.83584 3.75 3.50006 3.41421 3.50006 3C3.50006 2.58579 3.83584 2.25 4.25006 2.25Z" fill="currentColor"></path>
+                            </svg>
                         </li>
                     </ul>
                     <div class="button">
-                        <a class="link" href="#">
+                        <a class="link" href="index.html">
                             <div class="double">
                                 <div class="buttontext">GET STARTED</div>
                                 <div class="hovertext">GET STARTED</div>
