--- a/moriliving/moriliving.html
+++ b/moriliving/moriliving.html
@@ -6,109 +6,111 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css"/>
     </head>
     <body>
-        <div class="back">
-            <div>
+        <div class="bg-wrap">
+            <div class="bg-video">
                 <iframe src="https://player.vimeo.com/video/981023837?keyboard=0&amp;loop=1&amp;background=1&amp;quality=1080p&amp;app_id=122963" width="426" height="240" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="MORI LIVING" data-ready="true"></iframe>
             </div>
-            <div class="header">
-                <div class="nav">
-                    <header class="headernav">
-                        <div class="leftnav">
-                            <ul class="lang">
-                                <li class="lien">
-                                    <a class="aen" href="moriliving.html">EN</a>
-                                </li>
-                                <li class="lija"><a class="aja" href="moriliving.html">JA</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </header>
-                    <div class="rightnav">
-                        <ul class="rightlink">
-                            <li class="navlink">
-                                <a href="moriliving.html">レジデンス</a>
-                            </li>
-                            <li class="navlink">
-                                <a href="moriliving.html">サービスアパートメント</a>
-                            </li>
-                        </ul>
-                        <div class="hbline">
-                            <div class="top line"></div>
-                            <div class="middle"></div>
-                            <div class="bottom line"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="hbmenu">
-                <div class="hbbody">
-                    <header class="hbheader">
-                        <h1 class="title">MORI LIVING</h1>
-                        <p class="P">
-                            <span class="titleSPN">
-                                都市の豊かさと暮らす。
-                                <br class="nopc">
-                                森ビルのレジデンス。
-                            </span>
-                        </p>
-                    </header>
-                    <div class="hblist">
-                        <ul class="hbONlink">
-                            <li class="hblink">
-                                <a href="moriliving.html">
-                                    <span class="name">レジデンス</span>
-                                    <span class="nameSPN">街のすべてを我が家として暮らす。賃貸・分譲レジデンス。</span>
-                                </a>
-                            </li>
-                            <li class="hblink">
-                                <a href="moriliving.html">
-                                    <span class="name">サービスアパートメント</span>
-                                    <span class="nameSPN">都市に暮らす豊かさを1ヶ月から。家具・サービス付きレジデンス。</span>
-                                </a>
-                            </li>
-                        </ul>
-                        <ul class="search">
-                            <li class="contentname">
-                                <a href="moriliving.html">
-                                    <span>賃貸物件検索</span>
-                                </a>
-                            </li>
-                        </ul>
-                        <ul class="content">
-                            <li class="contenttitle">
-                                <p>お問い合わせ</p>
-                            </li>
-                            <li class="contentname">
-                                <a href="moriliving.html">
-                                    <span>賃貸物件について</span>
-                                </a>
-                            </li>
-                            <li class="contentname">
-                                <a href="moriliving.html">
-                                    <span>分譲物件について</span>
-                                </a>
-                            </li>
-                            <li class="contentname">
-                                <a href="moriliving.html">
-                                    <span>サービスアパートメントについて</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="info">
-                        <a href="moriliving.html">
-                            <p class="infotitle">MORI LIVING公式ウェブサイト リニューアルのお知らせ</p>
-                            <p class="infoP">2024.07.23</p>
-                        </a>
-                    </div>
+        </div>
+        <div class="header">
+            <div class="nav">
+                <header class="headernav">
                     <div class="leftnav">
                         <ul class="lang">
-                            <li>EN</li>
-                            <li>JA</li>
+                            <li class="lien">
+                                <a class="aen" href="moriliving.html">EN</a>
+                            </li>
+                            <li class="lija"><a class="aja" href="moriliving.html">JA</a>
+                            </li>
                         </ul>
+                    </div>
+                </header>
+                <div class="rightnav">
+                    <ul class="rightlink">
+                        <li class="navlink">
+                            <a href="moriliving.html">レジデンス</a>
+                        </li>
+                        <li class="navlink">
+                            <a href="moriliving.html">サービスアパートメント</a>
+                        </li>
+                    </ul>
+                    <div class="hbline">
+                        <div class="top line"></div>
+                        <div class="middle"></div>
+                        <div class="bottom line"></div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="menu-back"></div>
+        <div class="hbmenu">
+            <div class="hbbody">
+                <header class="hbheader">
+                    <h1 class="title">MORI LIVING</h1>
+                    <p class="P">
+                        <span class="titleSPN">
+                            都市の豊かさと暮らす。
+                            <br class="nopc">
+                            森ビルのレジデンス。
+                        </span>
+                    </p>
+                </header>
+                <div class="hblist">
+                    <ul class="hbONlink">
+                        <li class="hblink">
+                            <a href="moriliving.html">
+                                <span class="name">レジデンス</span>
+                                <span class="nameSPN">街のすべてを我が家として暮らす。賃貸・分譲レジデンス。</span>
+                            </a>
+                        </li>
+                        <li class="hblink">
+                            <a href="moriliving.html">
+                                <span class="name">サービスアパートメント</span>
+                                <span class="nameSPN">都市に暮らす豊かさを1ヶ月から。家具・サービス付きレジデンス。</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="search">
+                        <li class="contentname">
+                            <a href="moriliving.html">
+                                <span>賃貸物件検索</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="content">
+                        <li class="contenttitle">
+                            <p>お問い合わせ</p>
+                        </li>
+                        <li class="contentname">
+                            <a href="moriliving.html">
+                                <span>賃貸物件について</span>
+                            </a>
+                        </li>
+                        <li class="contentname">
+                            <a href="moriliving.html">
+                                <span>分譲物件について</span>
+                            </a>
+                        </li>
+                        <li class="contentname">
+                            <a href="moriliving.html">
+                                <span>サービスアパートメントについて</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="info">
+                    <a href="moriliving.html">
+                        <p class="infotitle">MORI LIVING公式ウェブサイト リニューアルのお知らせ</p>
+                        <p class="infoP">2024.07.23</p>
+                    </a>
+                </div>
+                <div class="leftnav">
+                    <ul class="lang">
+                        <li>EN</li>
+                        <li>JA</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <script src="moriliving.js"></script>
     </body>
 </html>
