修正完了(未完)

--- a/moriliving/moriliving.html
+++ b/moriliving/moriliving.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="moriliving.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css"/>
+        <meta name="viewport" content="width=divice-width,initial-scale=1">
     </head>
     <body>
         <div class="bg-wrap">
@@ -103,12 +104,7 @@
                         <p class="infoP">2024.07.23</p>
                     </a>
                 </div>
-                <div class="leftnav">
-                    <ul class="lang">
-                        <li>EN</li>
-                        <li>JA</li>
-                    </ul>
-                </div>
+               
             </div>
         </div>
         <script src="moriliving.js"></script>
