--- a/choujuku-body/choujuku.html
+++ b/choujuku-body/choujuku.html
@@ -11,26 +11,26 @@
         <section class="top">
             <div class="top-pictures">
                 <div>
+                    <div class="hover-picture one"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv02_pc.jpg" alt="超熟・超熟山型の写真" loading="lazy" width="1280" height="665"></div>
+                </div>
+                <div>
+                    <div class="hover-picture two"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv03_pc.jpg" alt="国産小麦の写真" loading="lazy" width="1280" height="665"></div>
+                </div>
+                <div>
+                    <div class="hover-picture three"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv04_pc.jpg" alt="超熟 ライ麦入りの写真" loading="lazy" width="1280" height="665"></div>
+                </div>
+                <div>
+                    <div class="hover-picture four"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv05_pc.jpg" alt="超熟 ロールの写真" loading="lazy" width="1280" height="665"></div>
+                </div>
+                <div>
+                    <div class="hover-picture five"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv06_pc.jpg" alt="超熟 イングリッシュマフィンの写真" loading="lazy" width="1280" height="665"></div>
+                </div>
+                <div>
+                    <div class="hover-picture six"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv07_pc.jpg" alt="超熟 フォカッチャの写真" loading="lazy" width="1280" height="665"></div>
+                </div>
+                <div>
                     <div class="base-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv01_pc.jpg" alt="超熟・超熟山型の写真" loading="lazy" width="1280" height="665"></div>
                     <p class="base-picture-p">余計なものはいれない。</p>
-                </div>
-                <div>
-                    <div class="hover-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv02_pc.jpg" alt="超熟・超熟山型の写真" loading="lazy" width="1280" height="665"></div>
-                </div>
-                <div>
-                    <div class="hover-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv03_pc.jpg" alt="国産小麦の写真" loading="lazy" width="1280" height="665"></div>
-                </div>
-                <div>
-                    <div class="hover-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv04_pc.jpg" alt="超熟 ライ麦入りの写真" loading="lazy" width="1280" height="665"></div>
-                </div>
-                <div>
-                    <div class="hover-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv05_pc.jpg" alt="超熟 ロールの写真" loading="lazy" width="1280" height="665"></div>
-                </div>
-                <div>
-                    <div class="hover-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv06_pc.jpg" alt="超熟 イングリッシュマフィンの写真" loading="lazy" width="1280" height="665"></div>
-                </div>
-                <div>
-                    <div class="hover-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv07_pc.jpg" alt="超熟 フォカッチャの写真" loading="lazy" width="1280" height="665"></div>
                 </div>
             </div>
             <div class="bottom-picture">                
@@ -110,5 +110,6 @@
             </div>
         </section>
     </main>
+    <script src="choujuku.js"></script>
 </body>
 </html>
