--- a/choujuku-body/choujuku.html
+++ b/choujuku-body/choujuku.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="choujuku.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css"/>
+    <link rel="stylesheet" href="swiper-bundle.min.css">
+    <link rel="stylesheet" href="choujuku.css">
     <meta name="viewport" content="width=divice-width,initial-scale=1">
 </head>
 <body>
@@ -11,89 +12,103 @@
         <section class="top">
             <div class="top-pictures">
                 <div>
-                    <div class="hover-picture one"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv02_pc.jpg" alt="超熟・超熟山型の写真" loading="lazy" width="1280" height="665"></div>
-                </div>
-                <div>
-                    <div class="hover-picture two"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv03_pc.jpg" alt="国産小麦の写真" loading="lazy" width="1280" height="665"></div>
-                </div>
-                <div>
-                    <div class="hover-picture three"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv04_pc.jpg" alt="超熟 ライ麦入りの写真" loading="lazy" width="1280" height="665"></div>
-                </div>
-                <div>
-                    <div class="hover-picture four"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv05_pc.jpg" alt="超熟 ロールの写真" loading="lazy" width="1280" height="665"></div>
-                </div>
-                <div>
-                    <div class="hover-picture five"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv06_pc.jpg" alt="超熟 イングリッシュマフィンの写真" loading="lazy" width="1280" height="665"></div>
-                </div>
-                <div>
-                    <div class="hover-picture six"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv07_pc.jpg" alt="超熟 フォカッチャの写真" loading="lazy" width="1280" height="665"></div>
-                </div>
-                <div>
-                    <div class="base-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv01_pc.jpg" alt="超熟・超熟山型の写真" loading="lazy" width="1280" height="665"></div>
+                    <div class="item zero"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv01_pc.jpg" alt="超熟・超熟山型の写真" loading="lazy" width="1280" height="665"></div>
                     <p class="base-picture-p">余計なものはいれない。</p>
                 </div>
+                <div>
+                    <div class="item one"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv02_pc.jpg" alt="超熟・超熟山型の写真" loading="lazy" width="1280" height="665"></div>
+                </div>
+                <div>
+                    <div class="item two"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv03_pc.jpg" alt="国産小麦の写真" loading="lazy" width="1280" height="665"></div>
+                </div>
+                <div>
+                    <div class="item three"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv04_pc.jpg" alt="超熟 ライ麦入りの写真" loading="lazy" width="1280" height="665"></div>
+                </div>
+                <div>
+                    <div class="item four"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv05_pc.jpg" alt="超熟 ロールの写真" loading="lazy" width="1280" height="665"></div>
+                </div>
+                <div>
+                    <div class="item five"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv06_pc.jpg" alt="超熟 イングリッシュマフィンの写真" loading="lazy" width="1280" height="665"></div>
+                </div>
+                <div>
+                    <div class="item six"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/home/mv07_pc.jpg" alt="超熟 フォカッチャの写真" loading="lazy" width="1280" height="665"></div>
+                </div>
             </div>
-            <div class="bottom-picture">                
-                <a href="choujuku.html">
-                    <div class="link-picture">
-                        <div class="select-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/content/lineup01.png" alt="超熟・超熟山型の写真" loading="lazy" width="120" height="100"></div>
-                        <span class="txt">
-                            超熟・
-                            <br>
-                            超熟山型
-                        </span>
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide hoverone">           
+                        <a href="choujuku.html">
+                            <div class="link-picture">
+                                <div class="select-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/content/lineup01.png" alt="超熟・超熟山型の写真" loading="lazy" width="120" height="100"></div>
+                                <span class="txt">
+                                    超熟・
+                                    <br>
+                                    超熟山型
+                                </span>
+                            </div>
+                        </a>
                     </div>
-                </a>   
-                <a href="choujuku.html">             
-                    <div class="link-picture">                    
-                        <div class="select-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/content/lineup02.png" alt="超熟 国産小麦の写真" loading="lazy" width="120" height="100"></div>
-                        <span class="txt">
-                            超熟
-                            <br>
-                            国産小麦
-                        </span>
+                    <div class="swiper-slide hovertwo"> 
+                        <a href="choujuku.html">             
+                            <div class="link-picture">                    
+                                <div class="select-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/content/lineup02.png" alt="超熟 国産小麦の写真" loading="lazy" width="120" height="100"></div>
+                                <span class="txt">
+                                    超熟
+                                    <br>
+                                    国産小麦
+                                </span>
+                            </div>
+                        </a>
                     </div>
-                </a>
-                <a href="choujuku.html">
-                    <div class="link-picture">                    
-                        <div class="select-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/content/lineup03.png?20240601" alt="超熟 ライ麦入りの写真" loading="lazy" width="120" height="100"></div>
-                        <span class="txt">
-                            超熟
-                            <br>
-                            ライ麦入り
-                        </span>
+                    <div class="swiper-slide hoverthree">
+                        <a href="choujuku.html">
+                            <div class="link-picture">                    
+                                <div class="select-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/content/lineup03.png?20240601" alt="超熟 ライ麦入りの写真" loading="lazy" width="120" height="100"></div>
+                                <span class="txt">
+                                    超熟
+                                    <br>
+                                    ライ麦入り
+                                </span>
+                            </div>
+                        </a>
                     </div>
-                </a>
-                <a href="choujuku.html">
-                    <div class="link-picture">                    
-                        <div class="select-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/content/lineup04.png" alt="超熟 ロールの写真" loading="lazy" width="120" height="100"></div>
-                        <span class="txt">
-                            超熟
-                            <br>
-                            ロール
-                        </span>
+                    <div class="swiper-slide hoverfour">
+                        <a href="choujuku.html">
+                            <div class="link-picture">                    
+                                <div class="select-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/content/lineup04.png" alt="超熟 ロールの写真" loading="lazy" width="120" height="100"></div>
+                                <span class="txt">
+                                    超熟
+                                    <br>
+                                    ロール
+                                </span>
+                            </div>
+                        </a>
                     </div>
-                </a>
-                <a href="choujuku.html">
-                    <div class="link-picture">                    
-                        <div class="select-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/content/lineup05.png" alt="超熟 イングリッシュマフィンの写真" loading="lazy" width="120" height="100"></div>
-                        <span class="txt">
-                            超熟
-                            <br>
-                            イングリッシュマフィン
-                        </span>
+                    <div class="swiper-slide hoverfive">
+                        <a href="choujuku.html">
+                            <div class="link-picture">                    
+                                <div class="select-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/content/lineup05.png" alt="超熟 イングリッシュマフィンの写真" loading="lazy" width="120" height="100"></div>
+                                <span class="txt">
+                                    超熟
+                                    <br>
+                                    イングリッシュマフィン
+                                </span>
+                            </div>
+                        </a>
                     </div>
-                </a>
-                <a href="choujuku.html">
-                    <div class="link-picture">                    
-                        <div class="select-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/content/lineup06.png" alt="超熟 フォカッチャの写真" loading="lazy" width="120" height="100"></div>
-                        <span class="txt">
-                            超熟
-                            <br>
-                            フォカッチャ
-                        </span>
+                    <div class="swiper-slide hoversix">
+                        <a href="choujuku.html">
+                            <div class="link-picture">                    
+                                <div class="select-picture"><img src="https://www.pasconet.co.jp/choujuku/assets/images/content/content/lineup06.png" alt="超熟 フォカッチャの写真" loading="lazy" width="120" height="100"></div>
+                                <span class="txt">
+                                    超熟
+                                    <br>
+                                    フォカッチャ
+                                </span>
+                            </div>
+                        </a>
                     </div>
-                </a>
+                </div>
             </div>
         </section>
         <section class="middle">
@@ -110,6 +125,7 @@
             </div>
         </section>
     </main>
+    <script src="swiper-bundle.min.js"></script>
     <script src="choujuku.js"></script>
 </body>
 </html>
